# whydoesntmycodework

./: Cargo.toml  flake.nix  host.dhall  readme.md  site.nix
posts/: aRealPost.md  adding_feeds.md  coffee.md  genai_is_crap.md  howitsmade.md  in_defense_of_xml.md  no_rss.md  rpi.md  tag_update.md  the_big_nixification.md  the_nixification_of_a_nas.md  what_i_miss_in_typescript.md
src/: main.rs  types.rs
src/handlers/: mod.rs
src/tmpl/: mod.rs
static/: robots.txt
static/css/: debugdance.css
