[package]
name = "whydoesntmycodework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.15", features = ["headers"]}
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
comrak = "0.18.0"
estimated_read_time = "1.0.0"
gray_matter = "0.2.6"
maud = { version = "*", features = ["axum"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_dhall = "0.12.1"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
