[package]
name = "whydoesntmycodework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.15", features = ["headers"]}
chrono = { version = "0.4.24", features = ["serde"] }
comrak = "0.18.0"
estimated_read_time = "1.0.0"
futures = "0.3.28"
hyper = "0.14.26"
maud = { version = "*", features = ["axum"] }
rand = "0.8.5"
ructe = "0.17.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_dhall = "0.12.1"
serde_json = "1.0.100"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
